--- a/app/src/main/res/layout/activity_eskperimen.xml
+++ b/app/src/main/res/layout/activity_eskperimen.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/ralewayextrabold"
-        android:text="Aktivitas Terakhir"
+        android:text="Rekam Aktivitas"
         android:textAlignment="center"
         android:textColor="@color/darkgrey"
         android:textSize="20sp"
